# terra-invicta-companion

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  copilot-instructions.md
docs/: architecture.md
docs/agents/: coding_conventions.md  python_conventions.md
scripts/: extract_gamestates.py  generate_index.py  generate_schema.py  json2pydantic.py  map_event_flow.py  validate_savefile.py
src/tic/: __init__.py  __main__.py  app.py  bus.py  cli.py  config.py  events.py  models.py  parser.py
src/tic/_config/: __init__.py  application.py  bootstrap.py  logging.py  profiles.py  routes.py  services.py  settings.py  wiring.py
src/tic/_infra/: bus_in_memory.py  document_store_in_memory.py  event_store_in_memory.py
src/tic/faction/: __init__.py
src/tic/faction/update/: __init__.py  core.py  events.py  shell.py
src/tic/home/: __init__.py  shell.py
src/tic/savefile/: __init__.py
src/tic/savefile/list/: __init__.py  document.py  shell.py
src/tic/savefile/process/: __init__.py  core.py  events.py  shell.py
src/tic/savefile/process/_extract/: __init__.py  identity.py
src/tic/savefile/process/_internal/: __init__.py  epoch.py  validated_input.py  validation_failure.py
src/tic/savefile/process/_processor/: __init__.py  campaign.py  faction.py
src/tic/savefile/process/processor/: __init__.py
src/tic/savefile/process/schema/: __init__.py  models.py
src/tic/savefile/process/schema/v1_0_32/: __init__.py  models.py
src/tic/shared/: application.py  command.py  document_store.py  event_store.py  event_subscriber.py  http_module.py  log_call.py  message_bus.py  models.py  profile.py  settings.py
src/tic/shared/events/: base.py  campaign.py  faction.py  models.py  savefile.py
templates/: index.html
templates/savefiles/: index.html
templates/savefiles/list/: _table.html  index.html
tests/: test_bus.py  test_cli.py  test_config.py  test_json2pydantic_cli.py  test_parser.py
tests/_infra/: test_bus.py
tests/savefile/process/: test_core.py
tests/savefile/process/fixtures/: autosave_minimal.json
tests/scripts/: test_map_event_flow.py
tests/shared/events/: test_base.py  test_campaign.py
tests/tic/_config/: test_bootstrap.py
tests/tic/_infra/: test_bus.py  test_document_store.py  test_event_store.py
tests/tic/faction/update/: test_e2e.py  test_update.py
tests/tic/savefile/list/: test_shell.py
tests/tic/savefile/process/: conftest.py  test_core.py  test_e2e.py  test_shell.py
tests/tic/savefile/process/_extract/: test_identity.py
tests/tic/savefile/process/_processor/: test_campaign_processor.py  test_faction_processor.py
